--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -208,3 +208,14 @@ footer {
     background: rgba(0, 0, 0, 0.2);
     height: 120px;
 }
+
+/*--------------------------------------Three Reasons */
+
+.three-reasons-icon {
+    font-size: 26px;
+    color: #e67e22;
+}
+
+.three-reasons-heading {
+    margin-bottom: 15px;
+}
