--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,8 +76,6 @@ h1,h2,h3,h4 {
     display: table;
 }
 
-.history-heading
-
 /*--------------------------------------Heading */
 
 header {
@@ -89,8 +87,8 @@ header {
 }
 
 .logo {
-    background: url(/IMGs/rosie.jpg);
-    background-position: center;
+    background: url(/IMGs/me-with-suit.jpg);
+    background-position: 20% 18%;
     background-repeat: no-repeat;
     background-size: cover;
     min-height: 360px;
@@ -163,6 +161,13 @@ menuitem span {
     font-weight: 300;
     letter-spacing: 2px;
 }
+
+/*--------------------------------------Projects */
+
+.project-section {
+    
+}
+
 /*--------------------------------------Footer */
 
 footer {
