Fixed progress bars

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -167,7 +167,7 @@ menuitem span {
 .project-section {
     padding: 2rem;
     border-top: 2px solid black;
-    background-color: #525252;
+    background-color: #f4f4f4;
 }
 
 .project-heading {
